--- a/playbooks/passwordchange.yaml
+++ b/playbooks/passwordchange.yaml
@@ -1,16 +1,16 @@
 ---
-- name: Playbook to create new user cmfsme with passwords and provide sudo access
+- name: Playbook to change password for user
   hosts: servers
   remote_user: root
   become: yes
   become_method: sudo
   gather_facts: false
   tasks:
-  - name: Creating user cmfsme
+  - name: Changing password for user
     user:
       name: "{{ item.user }}"
-      password: "{{ item.password }}"
       update_password: always
+      password: "{{ item.password }}"
     with_items:
     - user: "vengatr1" 
-    - password: ''
+      password: '$6$P1ICIrGtX02WFA33$.3PDYB50MVx5B9qeBCeYUc.CJAtu8bvIr26SypG3GxEgeR0RK5.j9a1buASp9orsfwXUFh7/OYlYE2c3iVkuA1'
