New playbooks added and existing playbooks modified

--- a/playbooks/ep2fetch.yaml
+++ b/playbooks/ep2fetch.yaml
@@ -1,8 +1,9 @@
 ---
-- name: Playbook to execute mef3 script and to fetch the output file 
+- name: Playbook to fetch the EP2 output files 
   become: true
   become_method: sudo
   hosts: servers
+  gather_facts: false
   remote_user: pandiasadmin
 
   tasks:
@@ -12,7 +13,7 @@
       paths: /tmp/EP2_Driver.sh.files
       patterns: '2020*'
       file_type: directory
-      age: "-1d"
+      age: "-3d"
     register: finddir
 
   - name: Find the EP2 output files under directory in /tmp/EP2_Driver.sh.files and register the output
@@ -24,7 +25,7 @@
   - name: Fetch mef3 files from remote server
     fetch:
       src: "{{ item }}"
-      dest: /home/kpandian/ansible/ep2output/{{ inventory_hostname }}/
+      dest: /home/kpandian/ansible/ep2output/CHG0037207/{{ inventory_hostname }}/
       flat: yes
     with_items:
     - "{{ findfiles.files | map(attribute='path') | list }}"
