--- a/playbooks/mef3pl.yaml
+++ b/playbooks/mef3pl.yaml
@@ -1,23 +1,23 @@
 ---
-- name: Playbook to execute mef3 script and to fetch the output file 
+- name: Playbook to execute mef3 perl script and to fetch the output file
   become: true
   become_method: sudo
   hosts: servers
   gather_facts: false
-  remote_user: pandiasadmin
 
   tasks:
-#    - name: Copy mef3 script with owner and permissions
-#      copy:
-#        src: /home/kpandian/ansible/files/iam_extract_ibm.sh
-#        dest: /tmp
-#        owner: root
-#        group: root
-#        mode: '0755'
+    - name: Copy mef3 perl script with owner and permissions
+      copy:
+        src: /home/kpandian/ansible/files/iam_extract_ibm.pl
+        dest: /tmp
+        owner: root
+        group: root
+        mode: '0755'
 
-#    - name: Execute mef3 script
-#      shell: cd /tmp && sh iam_extract_ibm.sh -c AMTRAK
-#      ignore_errors: True
+    - name: Execute mef3 script
+      shell: cd /tmp && ./iam_extract_ibm.pl --customer AMTRAK
+      ignore_errors: True
+      changed_when: false
 
     - name: Find the mef3 files under /tmp and register the output
       find:
