--- a/playbooks/passwordchange.yaml
+++ b/playbooks/passwordchange.yaml
@@ -12,5 +12,5 @@
       update_password: always
       password: "{{ item.password }}"
     with_items:
-    - user: "vengatr1" 
+    - user: "user1" 
       password: '$6$P1ICIrGtX02WFA33$.3PDYB50MVx5B9qeBCeYUc.CJAtu8bvIr26SypG3GxEgeR0RK5.j9a1buASp9orsfwXUFh7/OYlYE2c3iVkuA1'
